--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1301,7 +1301,7 @@ main {
   position: relative;
   z-index: 1;
   height: 175px; }
-  .small-movie-card__image::after {
+/*  .small-movie-card__image::after {
     content: '';
     position: absolute;
     z-index: 1;
@@ -1310,7 +1310,7 @@ main {
     left: 0;
     right: 0;
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(25%, rgba(0, 0, 0, 0)), color-stop(97%, rgba(0, 0, 0, 0.63)));
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.63) 97%); }
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.63) 97%); }*/
 
 .small-movie-card__title {
   position: absolute;
